[gd_scene load_steps=7 format=2]

[ext_resource path="res://Code/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Next.png" type="Texture" id=2]
[ext_resource path="res://Assets/Pause.png" type="Texture" id=3]
[ext_resource path="res://Assets/Play.png" type="Texture" id=4]
[ext_resource path="res://Code/Button.gd" type="Script" id=5]
[ext_resource path="res://Assets/Reset.png" type="Texture" id=6]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="ResetButton" type="Area2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ResetButton"]
position = Vector2( 16, 0 )
texture = ExtResource( 6 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ResetButton"]
visible = false
position = Vector2( 16, 0 )
polygon = PoolVector2Array( -16, 0, 168, 0, 168, 128, -16, 128 )

[node name="PauseButton" type="Area2D" parent="."]
position = Vector2( 208, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PauseButton"]
position = Vector2( 16, 0 )
texture = ExtResource( 3 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PauseButton"]
visible = false
position = Vector2( 16, 0 )
polygon = PoolVector2Array( -8, 0, 136, 0, 136, 128, -8, 128 )

[node name="PlayButton" type="Area2D" parent="."]
position = Vector2( 400, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="PlayButton"]
texture = ExtResource( 4 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayButton"]
visible = false
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[node name="NextButton" type="Area2D" parent="."]
position = Vector2( 568, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NextButton"]
position = Vector2( 16, 0 )
texture = ExtResource( 2 )
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NextButton"]
visible = false
polygon = PoolVector2Array( 0, 0, 152, 0, 152, 128, 0, 128 )
